[package]
name = "data-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy-inspector-egui = "0.14"
bevy_common_assets = {version = "0.4", features = ["yaml"]}
serde = { version = "1", features = ["derive"] }
bevy_rapier3d = "0.19"
bevy_tweening = "0.6"
bevy_egui = "0.17"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false